--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ install:
       export DISPLAY=':99.0'
       /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
     fi
+  - npm install
 script:
   - npm test
